--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -8,8 +8,7 @@ on:
       - main
     # Paths can be used to only trigger actions when you have edited certain files, such as a file within the /docs directory
     paths:
-      - 'docs/**.md'
-      - 'docs/images/**'
+      - 'Chapter*/*summary.md'
 
 jobs:
   converttopdf:
@@ -19,8 +18,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
-          input_dir: docs
-          output_dir: pdfs
+          input_dir: Chapter**
+          output_dir: md
           images_dir: docs/images
           # for example <img src="./images/file-name.png">
           image_import: ./images
