--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
-          input_dir: Chapter**
+          input_dir: Chapter_01_Introduction
           output_dir: md
           images_dir: docs/images
           # for example <img src="./images/file-name.png">
