--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -8,7 +8,7 @@ on:
       - main
     # Paths can be used to only trigger actions when you have edited certain files, such as a file within the /docs directory
     paths:
-      - 'Chapter*/*summary.md'
+      - 'Chapter_01_Introduction/**.md'
 
 jobs:
   converttopdf:
