--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
           input_dir: Chapter_01_Introduction
+          input_dir: Chapter_02_Workflow
           output_dir: md
           images_dir: docs/images
           # for example <img src="./images/file-name.png">
