--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -9,6 +9,7 @@ on:
     # Paths can be used to only trigger actions when you have edited certain files, such as a file within the /docs directory
     paths:
       - 'Chapter_01_Introduction/**.md'
+      - 'Chapter_02_Workflow/**.md'
 
 jobs:
   converttopdf:
@@ -36,7 +37,7 @@ jobs:
           input_dir: Chapter_04_Openroad_first_run
           output_dir: md
           build_html: false
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: mdtopdfs
           path: md
