work on mdtopdf yml

--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -40,6 +40,10 @@ jobs:
           output_dir: md
           build_html: false
 
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+
       - name: upload
         uses: actions/upload-artifact@v4
         with:
