--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -30,14 +30,14 @@ jobs:
         uses: baileyjm02/markdown-to-pdf@v1
         with:
           input_path: Chapter_03_Design_and_example_pick
-          output_dir: md
+          output_dir: md/
           build_html: false
 
       - name: chapter4
         uses: baileyjm02/markdown-to-pdf@v1
         with:
           input_path: Chapter_04_Openroad_first_run
-          output_dir: md
+          output_dir: md/
           build_html: false
 
       - name: List files in the repository
