--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -93,6 +93,12 @@ jobs:
         run: |
           ls ${{ github.workspace }}/md
 
+      - name: Combine pdfs
+        uses: elMuso/MergePDFs-action@1.1
+        with:
+          path: md
+          filename: course_summary.pdf
+
       - name: upload
         uses: actions/upload-artifact@v4
         with:
