--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -6,14 +6,21 @@ on:
   push:
     branches:
       - main
-    # Paths can be used to only trigger actions when you have edited certain files, such as a file within the /docs directory
     paths:
       - 'Chapter_01_Introduction/**.md'
       - 'Chapter_02_Workflow/**.md'
+      - 'Chapter_03_Design_and_example_pick/**.md'
+      - 'Chapter_04_Openroad_first_run/**.md'
+      - 'Chapter_05_PDK_Examination/**.md'
+      - 'Chapter_06_Data_in_Openroad/**.md'
+      - 'Chapter_07_LVS_and_DRC/**.md'
+      - 'Chapter_08_Simulation_and_PPA/**.md'
+      - 'Chapter_09_Scripting/**.md'
+      - 'Chapter_10_GDS_and_Tapeout/**.md'
 
 jobs:
   converttopdf:
-    name: Build PDF
+    name: Build Course Summary PDF
     runs-on: ubuntu-latest
     steps:
       - name: checkout
@@ -94,7 +101,7 @@ jobs:
           ls ${{ github.workspace }}/md
 
       - name: Combine PDFs
-        id: combine
+        id: course_summary
         uses: amoeba/combine-pdf-action@v1
         with:
           path: md
