--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -104,10 +104,10 @@ jobs:
         id: course_summary
         uses: amoeba/combine-pdf-action@v1
         with:
-          path: md/course_summary.pdf
+          path: md
 
       - name: upload
         uses: actions/upload-artifact@v4
         with:
           name: course_summary
-          path: md/course_summary.pdf
+          path: md
