--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -18,6 +18,9 @@ on:
       - 'Chapter_08_Simulation_and_PPA/**.md'
       - 'Chapter_09_Scripting/**.md'
       - 'Chapter_10_GDS_and_Tapeout/**.md'
+      
+on: 
+  workflow_dispatch
 
 jobs:
   converttopdf:
