--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -20,7 +20,9 @@ on:
       - 'Chapter_10_GDS_and_Tapeout/**.md'
       
 on: 
-  workflow_dispatch
+  workflow_dispatch:
+    branches:
+      - maina
 
 jobs:
   converttopdf:
