--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -30,95 +30,116 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
-      - name: chapter0
-        uses: baileyjm02/markdown-to-pdf@v1
-        with:
-          input_path: Chapter_00_Preparations
-          output_dir: md
-          build_html: false
-
-      - name: chapter1
-        uses: baileyjm02/markdown-to-pdf@v1
-        with:
-          input_path: Chapter_01_Introduction
-          output_dir: md/
-          build_html: false
-
-      - name: chapter2
-        uses: baileyjm02/markdown-to-pdf@v1
-        with:
-          input_path: Chapter_02_Workflow
-          output_dir: md/
-          build_html: false
-
-      - name: chapter3
-        uses: baileyjm02/markdown-to-pdf@v1
-        with:
-          input_path: Chapter_03_Design_and_example_pick
-          output_dir: md/
-          build_html: false
-
-      - name: chapter4
-        uses: baileyjm02/markdown-to-pdf@v1
-        with:
-          input_path: Chapter_04_Openroad_first_run
-          output_dir: md/
-          build_html: false
-
-      - name: chapter5
-        uses: baileyjm02/markdown-to-pdf@v1
-        with:
-          input_path: Chapter_05_PDK_Examination
-          output_dir: md/
-          build_html: false
-  
-      - name: chapter6
-        uses: baileyjm02/markdown-to-pdf@v1
-        with:
-          input_path: Chapter_06_Data_in_Openroad
-          output_dir: md/
-          build_html: false
-
-      - name: chapter7
-        uses: baileyjm02/markdown-to-pdf@v1
-        with:
-          input_path: Chapter_07_LVS_and_DRC
-          output_dir: md/
-          build_html: false
-            
-      - name: chapter8
-        uses: baileyjm02/markdown-to-pdf@v1
-        with:
-          input_path: Chapter_08_Simulation_and_PPA
-          output_dir: md/
-          build_html: false
-
-      - name: chapter9
-        uses: baileyjm02/markdown-to-pdf@v1
-        with:
-          input_path: Chapter_09_Scripting
-          output_dir: md/
-          build_html: false
-            
-      - name: chapter10
-        uses: baileyjm02/markdown-to-pdf@v1
-        with:
-          input_path: Chapter_10_GDS_and_Tapeout
-          output_dir: md/
-          build_html: false
-  
-      - name: List files in the repository
+      - name: create pdf folder
+        id: pdf_folder
         run: |
-          ls ${{ github.workspace }}/md
+          mkdir pdf
 
-      - name: Combine PDFs
-        id: course_summary
-        uses: amoeba/combine-pdf-action@v1
+      - name: chapter0
+        uses: docker://pandoc/latex:3.5
         with:
-          path: md
+          args: --output=pdf/chapter0.pdf Chapter_00_Preparations/c00_preparations.md
 
       - name: upload
         uses: actions/upload-artifact@v4
         with:
           name: course_summary
-          path: md
+          path: pdf
+
+
+
+# jobs:
+#   converttopdf:
+#     name: Build Course Summary PDF
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: checkout
+#         uses: actions/checkout@v3
+
+#       - name: chapter0
+#         uses: baileyjm02/markdown-to-pdf@v1
+#         with:
+#           input_path: Chapter_00_Preparations
+#           output_dir: md
+#           build_html: false
+
+#       - name: chapter1
+#         uses: baileyjm02/markdown-to-pdf@v1
+#         with:
+#           input_path: Chapter_01_Introduction
+#           output_dir: md/
+#           build_html: false
+
+#       - name: chapter2
+#         uses: baileyjm02/markdown-to-pdf@v1
+#         with:
+#           input_path: Chapter_02_Workflow
+#           output_dir: md/
+#           build_html: false
+
+#       - name: chapter3
+#         uses: baileyjm02/markdown-to-pdf@v1
+#         with:
+#           input_path: Chapter_03_Design_and_example_pick
+#           output_dir: md/
+#           build_html: false
+
+#       - name: chapter4
+#         uses: baileyjm02/markdown-to-pdf@v1
+#         with:
+#           input_path: Chapter_04_Openroad_first_run
+#           output_dir: md/
+#           build_html: false
+
+#       - name: chapter5
+#         uses: baileyjm02/markdown-to-pdf@v1
+#         with:
+#           input_path: Chapter_05_PDK_Examination
+#           output_dir: md/
+#           build_html: false
+  
+#       - name: chapter6
+#         uses: baileyjm02/markdown-to-pdf@v1
+#         with:
+#           input_path: Chapter_06_Data_in_Openroad
+#           output_dir: md/
+#           build_html: false
+
+#       - name: chapter7
+#         uses: baileyjm02/markdown-to-pdf@v1
+#         with:
+#           input_path: Chapter_07_LVS_and_DRC
+#           output_dir: md/
+#           build_html: false
+            
+#       - name: chapter8
+#         uses: baileyjm02/markdown-to-pdf@v1
+#         with:
+#           input_path: Chapter_08_Simulation_and_PPA
+#           output_dir: md/
+#           build_html: false
+
+#       - name: chapter9
+#         uses: baileyjm02/markdown-to-pdf@v1
+#         with:
+#           input_path: Chapter_09_Scripting
+#           output_dir: md/
+#           build_html: false
+            
+#       - name: chapter10
+#         uses: baileyjm02/markdown-to-pdf@v1
+#         with:
+#           input_path: Chapter_10_GDS_and_Tapeout
+#           output_dir: md/
+#           build_html: false
+  
+#       - name: List files in the repository
+#         run: |
+#           ls ${{ github.workspace }}/md
+
+#       - name: Combine PDFs
+#         id: course_summary
+#         uses: amoeba/combine-pdf-action@v1
+#         with:
+#           path: md
+
