--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -34,11 +34,12 @@ jobs:
         id: pdf_folder
         run: |
           mkdir pdf
+          echo "files=$(find -type f -name "*.md")" > $GITHUB_OUTPUT
 
       - name: chapter0
         uses: docker://pandoc/latex:3.5
         with:
-          args: --output=pdf/chapter0.pdf Chapter_00_Preparations/c00_preparations.md
+          args: --output=pdf/result.pdf ${{ steps.files_list.outputs.files }}
 
       - name: upload
         uses: actions/upload-artifact@v4
