--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -34,13 +34,13 @@ jobs:
         id: pdf_folder
         run: |
           mkdir pdf
-          files=$(find Chapter* -type f -name "*.md")
+          files=$(find Chapter* -type f -name '*.md')
           echo "$files" > $GITHUB_OUTPUT
 
       - name: chapter0
         uses: docker://pandoc/latex:3.5
         with:
-          args: --output=pdf/result.pdf ${{ steps.files_list.outputs.files }}
+          args: --output=pdf/result.pdf ${{ steps.pdf_folder.outputs.files }}
 
       - name: upload
         uses: actions/upload-artifact@v4
