--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           mkdir pdf
           files=$(find Chapter* -type f -name '*.md')
-          echo "list1=$files" > $GITHUB_OUTPUT
+          echo 'list1=$files' >> $GITHUB_OUTPUT
 
       - name: chapter0
         uses: docker://pandoc/latex:3.5
