--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -34,7 +34,7 @@ jobs:
         id: pdf_folder
         run: |
           mkdir pdf
-          files=$(find Chapter* -type f -name '*.md')
+          files=$(find -type f -name '*.md')
           echo 'list1=$files' >> $GITHUB_OUTPUT
 
       - name: chapter0
