--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -34,8 +34,7 @@ jobs:
         id: pdf_folder
         run: |
           mkdir pdf
-          files=$(find -type f -name '*.md')
-          echo 'list1=$files' >> $GITHUB_OUTPUT
+          echo 'list1=$(find Chapter* -type f -name '*.md')' >> $GITHUB_OUTPUT
 
       - name: chapter0
         uses: docker://pandoc/latex:3.5
