--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -34,7 +34,7 @@ jobs:
         id: pdf_folder
         run: |
           mkdir pdf
-          list0=$(find -type f -name "*.md")
+          list0=$(find Chapter* -type f -name "*.md")
           echo 'list1=$(list0)' >> $GITHUB_OUTPUT
 
       - name: chapter0
