--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
           mkdir pdf
           list0=$(find Chapter* -type f -name "*.md")
+          echo 'list1=$(list0)'
           echo 'list1=$(list0)' >> $GITHUB_OUTPUT
 
       - name: chapter0
