--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -35,8 +35,8 @@ jobs:
         run: |
           mkdir pdf
           list0=$(find Chapter* -type f -name "*.md")
-          echo '$(list0)'
-          echo 'list1=$(list0)' >> $GITHUB_OUTPUT
+          echo '$list0'
+          echo 'list1=$list0' >> $GITHUB_OUTPUT
 
       - name: chapter0
         uses: docker://pandoc/latex:3.5
