--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -52,7 +52,7 @@ jobs:
       - name: c01
         uses: docker://pandoc/latex:3.5
         with:
-          args: --output=pdf/c01.pdf /Chapter_01_Introduction/c01_lecture.md
+          args: --output=pdf/c01.pdf --resource-path=Chapter_01_Introduction/pics_lecture Chapter_01_Introduction/c01_lecture.md
 
       - name: upload
         uses: actions/upload-artifact@v4
