--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -30,19 +30,18 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
-      - name: create pdf folder
-        id: pdf_folder
-        run: |
-          mkdir pdf
-          list_trainings=$(find Chapter* -type f -name "*training.md")
-          echo $list_trainings
-          echo list_t=$list_trainings >> $GITHUB_OUTPUT
-          echo c00=$('Chapter_00_Preparations/c00_preparations.md') >> $GITHUB_OUTPUT
-
-      - name: combined
+      - name: c00
         uses: docker://pandoc/latex:3.5
         with:
-          args: --output=pdf/combined.pdf --from=markdown+rebase_relative_paths ${{ steps.pdf_folder.outputs.list1 }}
+          args: >-
+            --output=pdf/c00_preparations.pdf 
+            --slide-level 2 
+            --shift-heading-level=-1 
+            --toc 
+            --columns=50 
+            -t beamer 
+            --from=markdown+rebase_relative_paths 
+            Chapter_00_Preparations/c00_preparations.md 
 
       - name: c01_l
         uses: docker://pandoc/latex:3.5
@@ -109,45 +108,6 @@ jobs:
             --from=markdown+rebase_relative_paths 
             Chapter_05_PDK_Examination/c05_lecture.md 
 
-      - name: c00_t
-        uses: docker://pandoc/latex:3.5
-        with:
-          args: >-
-            --output=pdf/c00_preparations.pdf 
-            --slide-level 2 
-            --shift-heading-level=-1 
-            --toc 
-            --columns=50 
-            -t beamer 
-            --from=markdown+rebase_relative_paths 
-            Chapter_00_Preparations/c00_preparations.md 
-
-      # - name: c01_t
-      #   uses: docker://pandoc/latex:3.5
-      #   with:
-      #     args: >-
-      #       --output=pdf/c01_training.pdf 
-      #       --slide-level 2 
-      #       --shift-heading-level=-1 
-      #       --toc 
-      #       --columns=50 
-      #       -t beamer 
-      #       --from=markdown+rebase_relative_paths 
-      #       Chapter_01_Introduction/c01_training.md 
-
-      # - name: c02_t
-      #   uses: docker://pandoc/latex:3.5
-      #   with:
-      #     args: >-
-      #       --output=pdf/c02_training.pdf 
-      #       --slide-level 2 
-      #       --shift-heading-level=-1 
-      #       --toc 
-      #       --columns=50 
-      #       -t beamer 
-      #       --from=markdown+rebase_relative_paths 
-      #       Chapter_02_Workflow/c02_training.md 
-
       - name: c03_t
         uses: docker://pandoc/latex:3.5
         with:
@@ -192,101 +152,4 @@ jobs:
         with:
           name: course_summary
           path: pdf
-
-
-
-# jobs:
-#   converttopdf:
-#     name: Build Course Summary PDF
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: checkout
-#         uses: actions/checkout@v3
-
-#       - name: chapter0
-#         uses: baileyjm02/markdown-to-pdf@v1
-#         with:
-#           input_path: Chapter_00_Preparations
-#           output_dir: md
-#           build_html: false
-
-#       - name: chapter1
-#         uses: baileyjm02/markdown-to-pdf@v1
-#         with:
-#           input_path: Chapter_01_Introduction
-#           output_dir: md/
-#           build_html: false
-
-#       - name: chapter2
-#         uses: baileyjm02/markdown-to-pdf@v1
-#         with:
-#           input_path: Chapter_02_Workflow
-#           output_dir: md/
-#           build_html: false
-
-#       - name: chapter3
-#         uses: baileyjm02/markdown-to-pdf@v1
-#         with:
-#           input_path: Chapter_03_Design_and_example_pick
-#           output_dir: md/
-#           build_html: false
-
-#       - name: chapter4
-#         uses: baileyjm02/markdown-to-pdf@v1
-#         with:
-#           input_path: Chapter_04_Openroad_first_run
-#           output_dir: md/
-#           build_html: false
-
-#       - name: chapter5
-#         uses: baileyjm02/markdown-to-pdf@v1
-#         with:
-#           input_path: Chapter_05_PDK_Examination
-#           output_dir: md/
-#           build_html: false
-  
-#       - name: chapter6
-#         uses: baileyjm02/markdown-to-pdf@v1
-#         with:
-#           input_path: Chapter_06_Data_in_Openroad
-#           output_dir: md/
-#           build_html: false
-
-#       - name: chapter7
-#         uses: baileyjm02/markdown-to-pdf@v1
-#         with:
-#           input_path: Chapter_07_LVS_and_DRC
-#           output_dir: md/
-#           build_html: false
-            
-#       - name: chapter8
-#         uses: baileyjm02/markdown-to-pdf@v1
-#         with:
-#           input_path: Chapter_08_Simulation_and_PPA
-#           output_dir: md/
-#           build_html: false
-
-#       - name: chapter9
-#         uses: baileyjm02/markdown-to-pdf@v1
-#         with:
-#           input_path: Chapter_09_Scripting
-#           output_dir: md/
-#           build_html: false
-            
-#       - name: chapter10
-#         uses: baileyjm02/markdown-to-pdf@v1
-#         with:
-#           input_path: Chapter_10_GDS_and_Tapeout
-#           output_dir: md/
-#           build_html: false
-  
-#       - name: List files in the repository
-#         run: |
-#           ls ${{ github.workspace }}/md
-
-#       - name: Combine PDFs
-#         id: course_summary
-#         uses: amoeba/combine-pdf-action@v1
-#         with:
-#           path: md
 
