--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -30,6 +30,11 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
+      - name: create pdf folder
+        id: pdf_folder
+        run: |
+          mkdir pdf
+
       - name: c00
         uses: docker://pandoc/latex:3.5
         with:
