--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -34,6 +34,7 @@ jobs:
         id: pdf_folder
         run: |
           mkdir pdf
+          tlmgr install zref
 
       - name: c00
         uses: docker://pandoc/latex:3.5
