--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -52,20 +52,21 @@ jobs:
             Chapter_00_Preparations/c00_preparations.md 
 
       - name: c01_l
-        uses: docker://pandoc/latex:3.5
+        uses: docker://pandoc/extra:3.5
         with:
           args: >-
             --output=pdf/c01_lecture.pdf 
             --slide-level 2 
             --shift-heading-level=-1 
             --toc 
-            --columns=50 
+            --columns=50
+            --template pandoc/templates/default_mod.latex
             -t beamer 
             --from=markdown+rebase_relative_paths 
             Chapter_01_Introduction/c01_lecture.md 
 
       - name: c02_l
-        uses: docker://pandoc/latex:3.5
+        uses: docker://pandoc/extra:3.5
         with:
           args: >-
             --output=pdf/c02_lecture.pdf 
@@ -73,12 +74,13 @@ jobs:
             --shift-heading-level=-1 
             --toc 
             --columns=50 
+            --template pandoc/templates/default_mod.latex
             -t beamer 
             --from=markdown+rebase_relative_paths 
             Chapter_02_Workflow/c02_lecture.md 
 
       - name: c03_l
-        uses: docker://pandoc/latex:3.5
+        uses: docker://pandoc/extra:3.5
         with:
           args: >-
             --output=pdf/c03_lecture.pdf 
@@ -86,12 +88,13 @@ jobs:
             --shift-heading-level=-1 
             --toc 
             --columns=50 
+            --template pandoc/templates/default_mod.latex
             -t beamer 
             --from=markdown+rebase_relative_paths 
             Chapter_03_Design_and_example_pick/c03_lecture.md 
 
       - name: c04_l
-        uses: docker://pandoc/latex:3.5
+        uses: docker://pandoc/extra:3.5
         with:
           args: >-
             --output=pdf/c04_lecture.pdf 
@@ -99,12 +102,13 @@ jobs:
             --shift-heading-level=-1 
             --toc 
             --columns=50 
+            --template pandoc/templates/default_mod.latex
             -t beamer 
             --from=markdown+rebase_relative_paths 
             Chapter_04_Openroad_first_run/c04_lecture.md 
 
       - name: c05_l
-        uses: docker://pandoc/latex:3.5
+        uses: docker://pandoc/extra:3.5
         with:
           args: >-
             --output=pdf/c05_lecture.pdf 
@@ -112,12 +116,13 @@ jobs:
             --shift-heading-level=-1 
             --toc 
             --columns=50 
+            --template pandoc/templates/default_mod.latex
             -t beamer 
             --from=markdown+rebase_relative_paths 
             Chapter_05_PDK_Examination/c05_lecture.md 
 
       - name: c03_t
-        uses: docker://pandoc/latex:3.5
+        uses: docker://pandoc/extra:3.5
         with:
           args: >-
             --output=pdf/c03_training.pdf 
@@ -125,12 +130,13 @@ jobs:
             --shift-heading-level=-1 
             --toc 
             --columns=50 
+            --template pandoc/templates/default_mod.latex
             -t beamer 
             --from=markdown+rebase_relative_paths 
             Chapter_03_Design_and_example_pick/c03_training.md 
 
       - name: c04_t
-        uses: docker://pandoc/latex:3.5
+        uses: docker://pandoc/extra:3.5
         with:
           args: >-
             --output=pdf/c04_training.pdf 
@@ -138,12 +144,13 @@ jobs:
             --shift-heading-level=-1 
             --toc 
             --columns=50 
+            --template pandoc/templates/default_mod.latex
             -t beamer 
             --from=markdown+rebase_relative_paths 
             Chapter_04_Openroad_first_run/c04_training.md 
 
       - name: c05_t
-        uses: docker://pandoc/latex:3.5
+        uses: docker://pandoc/extra:3.5
         with:
           args: >-
             --output=pdf/c05_training.pdf 
@@ -151,6 +158,7 @@ jobs:
             --shift-heading-level=-1 
             --toc 
             --columns=50 
+            --template pandoc/templates/default_mod.latex
             -t beamer 
             --from=markdown+rebase_relative_paths 
             Chapter_05_PDK_Examination/c05_training.md 
